fix(Modal): dismmisal modal background flicker fix (#670)

--- a/src/components/reusable/modal/modal.scss
+++ b/src/components/reusable/modal/modal.scss
@@ -31,7 +31,7 @@ dialog {
   }
 
   &::backdrop {
-    background-color: var(--kd-color-background-page-default);
+    background-color: var(--kd-color-background-opacity-inverse-backdrop);
   }
 
   &.size--md {
